# Phi_2_GraphMode_and_SNPE

./: Android.mk  Application.mk  LoadContainer.cpp  README.md  Requirements and Instructions  alt.sh  android_main_htp_non_udo.cpp  compile.sh  compile_run.sh  makefile  ndk_compile.sh  run.sh  script.sh
Android/: CMakeLists.txt  LoadInputTensor.hpp  Wrapper.hpp  android_main.h  android_main_htp_non_udo.cpp  main_macros.h  native-lib.cpp  snpe_exec_utils.h  snpe_tutorial_utils.h  test.h  test2.cpp  test2.h  test3.h
Android/DiagLog/: IDiagLog.h  IDiagLog.hpp  Options.h  Options.hpp
Android/DlContainer/: DlContainer.h  IDlContainer.hpp
Android/DlSystem/: DlEnums.h  DlEnums.hpp  DlError.hpp  DlOptional.hpp  DlVersion.h  DlVersion.hpp  IBufferAttributes.h  IBufferAttributes.hpp  IOBufferDataTypeMap.h  IOBufferDataTypeMap.hpp  ITensor.h  ITensor.hpp  ITensorFactory.hpp  ITensorItr.hpp  ITensorItrImpl.hpp  IUserBuffer.h  IUserBuffer.hpp  IUserBufferFactory.hpp  PlatformConfig.h  PlatformConfig.hpp  RuntimeList.h  RuntimeList.hpp  String.hpp  StringList.h  StringList.hpp  TensorMap.h  TensorMap.hpp  TensorShape.h  TensorShape.hpp  TensorShapeMap.h  TensorShapeMap.hpp  UserBufferMap.h  UserBufferMap.hpp  UserMemoryMap.h  UserMemoryMap.hpp
Android/SNPE/: ApplicationBufferMap.h  ApplicationBufferMap.hpp  PSNPE.h  PSNPE.hpp  PlatformValidator.h  RuntimeConfigList.h  RuntimeConfigList.hpp  SNPE.h  SNPE.hpp  SNPEBuilder.h  SNPEBuilder.hpp  SNPEFactory.hpp  SNPEUtil.h  UserBufferList.h  UserBufferList.hpp
Android/SNPE/PlatformValidator/: PlatformValidator.hpp
Android/SnpeUdo/: UdoReg.h  UdoShared.h
GM/: cache.py  my_phi_gm.py  split_saver.ipynb  workspace.ipynb
UDO/: Decode.cpp  Decode.json  Unified_Phi_Model.py  compile.sh  decoder.cpp  ops.cpp  ops_fp16_to_fp32.cpp  script.sh  test.cpp  workspace.ipynb
UDO/snpe_exec/: LoadContainer.cpp  main.cpp  (+9 more)
jni/: Android.mk  Application.mk  CreateUserBuffer.cpp  LoadUDOPackage.cpp  Util.cpp  android._main.cpp  android_main.cpp  android_main_htp_non_udo.cpp  htp_main_no_udo.cpp  load_test  load_test.cpp  load_test_old.cpp  main_alt.cpp  makefile
model_split/: bert.py  guide.txt  masking_utils_gm.py  my_phi.py  my_phi_gm.py  script.sh  split_defs.py  split_saver.ipynb  split_saver.py  workspace.ipynb
(+12 files in other folders)
